--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="stylsheet"
     <title>Gustavo's Winery</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
           cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
           alias unde officiis quos atque!
         </p>
-        <img src="food one" />
+        <img src=""  alt="foodone"/>
       </div>
 
       <div class="foodtwo">
@@ -37,7 +37,7 @@
           cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
           alias unde officiis quos atque!
         </p>
-        <img src="foodtwo" />
+        <img src="" alt="foodtwo"/>
         F
       </div>
 
@@ -49,7 +49,7 @@
           cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
           alias unde officiis quos atque!
         </p>
-        <img src="foodthree" />
+        <img src="" alt="foodthree"/>
       </div>
 
       <footer>Copyright Gustavo 2020</footer>
