--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="stylsheet"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Gustavo's Winery</title>
   </head>
   <body>
@@ -14,42 +16,47 @@
         <a href="/">contact</a>
       </nav>
 
-      <div class="main-img.">PIC here</div>
+      <div class="main-img."></div>
 
       <div class="content">
-        <h2>Food one</h2>
+        <div class="foodcontent">
+          <h2>Food one</h2>
 
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
-          ipsum vel exercitationem itaque adipisci repellat nesciunt est
-          cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
-          alias unde officiis quos atque!
-        </p>
-        <img src=""  alt="foodone"/>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
+            ipsum vel exercitationem itaque adipisci repellat nesciunt est
+            cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
+            alias unde officiis quos atque!
+          </p>
+        </div>
+        <img src=https://unsplash.it/200/200 alt="food one" />
       </div>
 
       <div class="foodtwo">
-        <h2>Food two</h2>
-        L
-        <p>
-          orem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
-          ipsum vel exercitationem itaque adipisci repellat nesciunt est
-          cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
-          alias unde officiis quos atque!
-        </p>
-        <img src="" alt="foodtwo"/>
-        F
+        <div class="foodcontent">
+          <h2>Food two</h2>
+
+          <p>
+            orem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
+            ipsum vel exercitationem itaque adipisci repellat nesciunt est
+            cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
+            alias unde officiis quos atque!
+          </p>
+        </div>
+        <img src="https://unsplash.it/200/200" alt="food two" />
       </div>
 
       <div>
-        <h2>Food three</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
-          ipsum vel exercitationem itaque adipisci repellat nesciunt est
-          cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
-          alias unde officiis quos atque!
-        </p>
-        <img src="" alt="foodthree"/>
+        <div class="foodcontent">
+          <h2>Food three</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores
+            ipsum vel exercitationem itaque adipisci repellat nesciunt est
+            cupiditate nulla magni, doloremque veritatis eaque quasi laboriosam,
+            alias unde officiis quos atque!
+          </p>
+        </div>
+        <img src="https://unsplash.it/200/200" alt="food three" />
       </div>
 
       <footer>Copyright Gustavo 2020</footer>
